syntax = "proto2";

package huton_proto;

message CachePutCommand {
    required string cache_name = 1;
    required bytes key = 2;
    required bytes value = 3;
}

message CacheDeleteCommand {
    required string cache_name = 1;
    required bytes key = 2;
}


